load("//tools:defs.bzl", "builder")

package(default_visibility = ["//builders/gcf/java11/acceptance:__pkg__"])

licenses(["notice"])

builder(
    name = "builder",
    buildpacks = [
        "//cmd/java/maven:maven.tgz",
        "//cmd/java/graalvm:graalvm.tgz",
        "//cmd/utils/archive_source:archive_source.tgz",
        "//cmd/utils/label:label.tgz",
    ],
    image = "gcf/graalvm",
)
